--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_slideshow_1">Slideshow_1</string>
+    <string name="menu_gallery">Галерея</string>
+    <string name="menu_slideshow">Заглушка1</string>
+    <string name="menu_slideshow_1">Заглушка2</string>
 
     <string name="menu_10">Журнал</string>
     <string name="menu_11">Создать журнал</string>
@@ -33,4 +33,5 @@
     <string name="wednesday">Wednesday</string>
     <string name="tuesday">Tuesday</string>
     <string name="monday">Monday</string>
+    <string name="menu_journal">Журнал</string>
 </resources>
