Перенос кода для базы данных и ее работы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="tuesday">Tuesday</string>
     <string name="monday">Monday</string>
     <string name="menu_journal">Журнал</string>
+
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
